# daps

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  command.rs  commands.rs  completer.rs  cpboard.rs  encryption.rs  helper.rs  main.rs  mcp.rs  repl.rs  utils.rs
src/commands/: insert.rs  migration.rs  parse_db.rs  refresh.rs  reload.rs  reload_by_paths.rs  search.rs  select.rs  set.rs
