[package]
name = "daps"
version = "0.1.2"
edition = "2024"
description = "A command-line tool for managing AWS Systems Manager Parameter Store"
license = "MIT"
authors = ["D. Doffy <cuongnsm@gmail.com>"]
homepage = "https://doffylaw.org"
repository = "https://github.com/ddoffy/daps"

[dependencies]
rusoto_core = "0.47.0"
rusoto_ssm = "0.47.0"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
rustyline = "10.0.0"
async-trait = "0.1.58"
futures = "0.3"
regex = "1.7.0"
colored = "3.0.0"
sha2 = "0.10.6"
aes-gcm = "0.10.1"
base64 = "0.21.0"
rand = "0.8.5"
